@@ -22,7 +22,6 @@ import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class AltaMedicaServiceImpl implements AltaMedicaService {
@@ -85,7 +84,7 @@ public class AltaMedicaServiceImpl implements AltaMedicaService {
     public ListResponse<AltaMedicaDTO> getAllAltaMedica(UUID hospitalId, int page, int rows) {
         Pageable pageable = PageRequest.of(page - 1, rows);
         Page<AltaMedicaEntity> altaMedicaEntityPage = altaMedicaRepository.findByHospital_HospitalId(hospitalId, pageable);
-        List<AltaMedicaDTO> data = altaMedicaEntityPage.getContent().stream().map(this::convertToDTO).collect(Collectors.toList());
+        List<AltaMedicaDTO> data = altaMedicaEntityPage.getContent().stream().map(this::convertToDTO).toList();
         return new ListResponse<>(data,
                 altaMedicaEntityPage.getTotalElements(),
                 altaMedicaEntityPage.getTotalPages(),
